@@ -6,10 +6,13 @@ New features:
 - http://www.zope.org/Collectors/CMF/309
 - reindexObjectSecurity() optimization : CMF > 1.5.1
 - getBeforeCommitHooks() added to Transaction
+- doActionFor() propagates **kw to isActionSupported()
+_checkTransitionGuard() until the guard.check() method so that
+StateChangeInfo() can be constructed with those kwargs.: CMF > 1.5.1
 Bug fixes:
 ~~~~~~~~~~
 - #610: Fix for Zope 2.7 + Five compatibility.
-- PatchCMFCoreCMFCatalogAware.py: 'aq_base' was not defined 
+- PatchCMFCoreCMFCatalogAware.py: 'aq_base' was not defined
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 -
